--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,13 +6,23 @@
 */
 
 // Colors
-$color-secondary: rgba(8, 2, 39, 100);
+$color-secondary: rgba(8, 2, 39, 1);
+$color-bright: rgba(250, 251, 244, 1);
+
+// Dark Mode
+$color-background: rgba(43,42,51, 1);
 
 // Mixin
 @mixin box-shadow {
     -webkit-box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.15);
     -moz-box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.15);
     box-shadow: 0px 0px 3px 1px rgba(0, 0, 0, 0.15);
+
+    body.darkmode & {
+        -webkit-box-shadow: 0px 0px 3px 0px rgba(255, 255, 255, 0.15);
+    -moz-box-shadow: 0px 0px 3px 0px rgba(255, 255, 255, 0.15);
+    box-shadow: 0px 0px 3px 1px rgba(255, 255, 255, 0.15);
+    }
 }
   
 @mixin box-shadow-inset {
