--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -12,7 +12,7 @@
 * { box-sizing: border-box;
     padding: 0;
     margin: 0;
-    font-family: sans-serif;
+    font-family: "Rubik";
 }
 
 //! Colors werden noch gelöscht
@@ -29,12 +29,49 @@ $color-primary-dark-3: rgba(0, 12, 35, 1);
 
 //Todo: Darkmode einrichten zum schluss Zeile 42 ist ein test
 // standart Elements
-body.darkmode {
-    background-color: $color-background;
+body {
+    background-color: $color-bright;
+    
+    &.darkmode {
+        background-color: $color-background;
+    }
 }
-// ui-classes
 
-.ui-flex {
+// classes
+.container {
+    max-width: 1300px;
+    margin: 0 auto;
+    padding: 10px;
+}
+
+.flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+    flex-direction: column;
+
+    @media #{$tablet} {
+        align-items: flex-start;
+        flex-direction: row;
+     }
+
+    &.center {
+        align-items: center;
+    }
+
+    &.col {
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    &.row {
+        flex-direction: row;
+        gap: 20px;
+    }
+}
+
+.flex-center {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -43,6 +80,36 @@ body.darkmode {
     @media #{$mobileMax} {
         gap: 10px;
     }
+}
+
+.w-600 {
+    max-width: 600px;
+}
+
+.my-1{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.mb-2 {
+    margin-bottom: 20px;
+}
+
+.h2 {
+    font-size: clamp(1.2em, 2vw + 0.4em, 1.8em);
+    font-weight: 300;
+    text-align: center;
+    color: $color-gray;
+}
+
+.hr {
+    border-color: $color-gray-light;
+    max-width: 1280px;
+    margin: 0 10px;
+
+    @media #{$max} {
+        margin: 0 auto;
+      }
 }
 
 // ui-Elements
@@ -64,7 +131,6 @@ body.darkmode {
     &.logo-link {
         color: $color-secondary;
         font-size: clamp(1.5em, 2vw + 0.5em, 2em);
-        font-family: "Rubik";
         font-weight: 800;
         font-style: italic;
         line-height: 1em;
@@ -82,7 +148,6 @@ body.darkmode {
       }
     
     .a-ui-element {
-        font-family: "Rubik";
         font-weight: 500;
         font-size: clamp(0.9em, 2vw + 0.2em, 1.1em);
         border-bottom: 2px solid transparent;
@@ -136,7 +201,6 @@ body.darkmode {
         gap: 10px;
 
         .a-ui-element {
-            font-family: "Rubik";
             font-weight: 500;
             font-size: clamp(0.9em, 2vw + 0.2em, 1.1em);
             border-bottom: 2px solid transparent;
@@ -229,7 +293,7 @@ span {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
+    padding: 20px 10px;
     position: relative;
 
     @media #{$mobileMax} {
@@ -286,5 +350,38 @@ span {
   
     @media #{$tablet} {
       display: none;
+    }
+}
+
+.hero-component {
+    h1 {
+        font-size: clamp(1.5em, 3vw + 0.5em, 3.1em);
+        line-height: 1.3em;
+        font-weight: 800;
+        color: $color-secondary;
+
+        body.darkmode & {
+            color: $color-bright;
+        }
+    }
+
+    p {
+        font-size: 1.05em;
+        line-height: 1.6em;
+        font-weight: 400;
+        color: $color-gray;
+    }
+
+    .profile-image {
+        border-radius: 50%;
+    }
+
+    .header-image {
+        border-radius: 16px;
+        object-fit: cover;
+        width: clamp(225px, 30vw + 100px, 500px);
+        height: calc(clamp(225px, 30vw + 100px, 500px) * 1.2);
+
+        @include box-shadow-xl;
     }
 }
