--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -52,6 +52,10 @@ h2 {
     font-weight: 300;
     text-align: center;
     color: $color-gray;
+
+    body.darkmode & {
+        color: $color-gray-light;
+    }
 }
 
 // classes
@@ -378,6 +382,10 @@ span {
         line-height: 1.6em;
         font-weight: 400;
         color: $color-gray;
+
+        body.darkmode & {
+            color: $color-gray-light;
+        }
     }
 
     .profile-image {
